@@ -3,7 +3,6 @@ package ru.job4j.collection;
 import org.junit.Test;
 
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -18,14 +17,12 @@ public class FullSearchTest {
                 new Task("2", "Second desc"),
                 new Task("1", "First desc")
         );
-        Set<String> expected = new HashSet<>(Arrays.asList("1", "2"));
-        assertThat(FullSearch.extractNumber(tasks), is(expected));
+        assertThat(FullSearch.extractNumber(tasks), is(Set.of("1", "2")));
     }
 
     @Test
     public void emptyNumber() {
         List<Task> tasks = Arrays.asList();
-        Set<String> expected = new HashSet<>(Arrays.asList());
-        assertThat(FullSearch.extractNumber(tasks), is(expected));
+        assertThat(FullSearch.extractNumber(tasks), is(Set.of()));
     }
 }
